--- a/package.json
+++ b/package.json
@@ -1,35 +1,62 @@
 {
-  "name": "driverwebapp",
-  "version": "1.0.0",
-  "description": "Web application to save the image of bills which is accessed by both admin and driver",
-  "main": "server.js",
-  "private": false,
+  "name": "driverWebApp",
+  "version": "0.0.0",
+  "license": "MIT",
   "engine": {
-    "node": "6.*"
+    "node": "8.*"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "ng": "ng",
+    "start": "nodemon server.js && ng build",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/BagDKart/driverWebApp.git"
-  },
-  "keywords": [
-    "\"\"\u001b[Dbagdkart",
-    "driver\""
-  ],
-  "author": "baluk1219@gmail.com",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/BagDKart/driverWebApp/issues"
-  },
-  "homepage": "https://github.com/BagDKart/driverWebApp#readme",
+  "private": false,
   "dependencies": {
-    "cf-deployment-tracker-client": "^0.1.3",
+    "@angular/animations": "^5.0.0",
+    "@angular/common": "^5.0.0",
+    "@angular/compiler": "^5.0.0",
+    "@angular/core": "^5.0.0",
+    "@angular/forms": "^5.0.0",
+    "@angular/http": "^5.0.0",
+    "@angular/platform-browser": "^5.0.0",
+    "@angular/platform-browser-dynamic": "^5.0.0",
+    "@angular/router": "^5.0.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.2",
     "cfenv": "^1.0.4",
+    "core-js": "^2.4.1",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
-    "nodemon": "^1.12.1"
+    "express-validator": "^4.3.0",
+    "jsonwebtoken": "^8.1.0",
+    "mongodb": "^2.2.33",
+    "mongoose": "^4.13.5",
+    "rxjs": "^5.5.2",
+    "zone.js": "^0.8.14"
+  },
+  "devDependencies": {
+    "@angular/cli": "1.5.4",
+    "@angular/compiler-cli": "^5.0.0",
+    "@angular/language-service": "^5.0.0",
+    "@types/jasmine": "~2.5.53",
+    "@types/jasminewd2": "~2.0.2",
+    "@types/node": "~6.0.60",
+    "codelyzer": "^4.0.1",
+    "jasmine-core": "~2.6.2",
+    "jasmine-spec-reporter": "~4.1.0",
+    "karma": "~1.7.0",
+    "karma-chrome-launcher": "~2.1.1",
+    "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-jasmine": "~1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "nodemon": "^1.12.1",
+    "protractor": "~5.1.2",
+    "ts-node": "~3.2.0",
+    "tslint": "~5.7.0",
+    "typescript": "~2.4.2"
   }
 }
