--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "\"\"\u001b[DdriverApplicationWeb",
   "main": "server.js",
+  "engines": {
+    "node": "8.*"
+  },
+  "private": false,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
